@@ -148,7 +148,7 @@ MsiFile::MsiFile(
 	DWORD size = MAX_PATH;
 	TCHAR buffer[MAX_PATH];
 	array = new tagFile[count];
-	MsiQuery q(msiUtils, TEXT("SELECT File, Component_, FileName, FileSize, Attributes, Sequence, Version FROM File ORDER BY Sequence"));
+	MsiQuery q(msiUtils, TEXT("SELECT File, Component_, FileName, FileSize, Attributes, Sequence, Version, Language FROM File ORDER BY Sequence"));
 
 	for(tagFile* p = array; (record = q.Next()) != NULL; p++)
 	{
@@ -173,6 +173,10 @@ MsiFile::MsiFile(
 		size = MAX_PATH;
 		MsiRecordGetString(record, 7, buffer, &size);
 		p->version = buffer;
+
+		size = MAX_PATH;
+		MsiRecordGetString(record, 8, buffer, &size);
+		p->language = buffer;
 	}
 }
 
