@@ -1,5 +1,6 @@
 
 #include <windows.h>
+#include <objbase.h>
 #include <stdio.h>
 #include <tchar.h>
 
