@@ -1,0 +1,17 @@
+!include ..\sources.inc
+
+TARGETNAME = msidump
+TARGETPATH = obj
+TARGETTYPE = PROGRAM
+UMTYPE     = console
+UMENTRY    = wmain
+
+SOURCES =              \
+	$(SOURCES)     \
+	MsiDump.cpp    \
+	parseArgs.cpp
+
+TARGETLIBS =                          \
+	$(SDK_LIB_PATH)\msi.lib       \
+	$(SDK_LIB_PATH)\setupapi.lib  \
+	$(SDK_LIB_PATH)\ole32.lib
