@@ -125,6 +125,7 @@ enum Columns
 	COLUMN_SIZE,
 	COLUMN_PATH,
 	COLUMN_PLATFORM,
-	COLUMN_VERSION
+	COLUMN_VERSION,
+	COLUMN_LANGUAGE
 };
 
