@@ -5,6 +5,7 @@
 #define IDS_LISTVIEW_COLUMN_PATH       104
 #define IDS_LISTVIEW_COLUMN_PLATFORM   105
 #define IDS_LISTVIEW_COLUMN_VERSION    106
+#define IDS_LISTVIEW_COLUMN_LANGUAGE   107
 
 #define IDS_STATUSBAR_SELECTED         110
 #define IDS_STATUSBAR_TOTAL            111
