@@ -1,0 +1,27 @@
+!include ..\sources.inc
+
+TARGETNAME = msidumpcab
+TARGETPATH = obj
+TARGETTYPE = PROGRAM
+UMTYPE     = windows
+UMENTRY    = wwinmain 
+
+USE_ATL = 1
+ATL_VER = 30
+
+SOURCES =              \
+	$(SOURCES)     \
+	DragDrop.cpp   \
+	ui.cpp         \
+	ui.rc
+
+TARGETLIBS =                          \
+	$(SDK_LIB_PATH)\msi.lib       \
+	$(SDK_LIB_PATH)\setupapi.lib  \
+	$(SDK_LIB_PATH)\comctl32.lib  \
+	$(SDK_LIB_PATH)\comdlg32.lib  \
+	$(SDK_LIB_PATH)\ole32.lib     \
+	$(SDK_LIB_PATH)\oleaut32.lib  \
+	$(SDK_LIB_PATH)\shell32.lib   \
+	$(SDK_LIB_PATH)\shlwapi.lib   \
+	$(SDK_LIB_PATH)\uuid.lib
